# topic-benchmark

./: LICENSE  README.md  pyproject.toml
results/: _all-MiniLM-L6-v2.jsonl  all-MiniLM-L6-v2.jsonl  all-mpnet-base-v2.jsonl  average_word_embeddings_glove.6B.300d.jsonl  intfloat__e5-large-v2.jsonl
results/chinese/: paraphrase-multilingual-MiniLM-L12-v2.jsonl
s3_paper_scripts/: arxiv_ml_compass.py  disaggregated_results_figures.py  effect_of_preprocessing_figure.py  main_table.py  npmi_table.py  rank_figure.py  requirements.txt  speed.py  stop_words_figure.py  topic_descriptions.py
scripts/: chinese_benchmark.py
scripts/chinese/: chinese_benchmark.py
scripts/s3_paper/: c_npmi_table.py  disaggregated_figures.py  effect_of_embedding.py  load_results.py  percent_faster.py  performance_figure.py  performance_table.py  preprocessing_effects.py  qualitative_table.py  stop_words_figure.py
tables/: main_table.tex  npmi_table.tex  topic_description.tex
topic_benchmark/: __init__.py  __main__.py  base.py  benchmark.py  cli.py  cluster_problem.py  defaults.py  figures.py  figures_plt.py  registries.py  table.py  utils.py
topic_benchmark/datasets/: __init__.py  arxiv_ml.py  bbc_news.py  newsgroups.py  stackexchange.py  wiki_medical.py
topic_benchmark/encoders/: __init__.py  e5_encoders.py
topic_benchmark/metrics/: __init__.py  diversity.py  npmi.py  wec.py
topic_benchmark/models/: __init__.py  _ecrtm.py  bertopic.py  classical.py  ecrtm.py  top2vec.py  turftopic.py
